{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 632,
  "lineage": "60f90f34-bdaf-4ec6-bb03-d3d9aaa84aa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e646b35ac742c0c8",
            "domain": "vpc",
            "id": "eipalloc-0e646b35ac742c0c8",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-84-127-157.us-west-2.compute.amazonaws.com",
            "public_ip": "35.84.127.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-NAT-EIP-almira"
            },
            "tags_all": {
              "Name": "prod-NAT-EIP-almira"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:internet-gateway/igw-0c8bc87365cbdc5f0",
            "id": "igw-0c8bc87365cbdc5f0",
            "owner_id": "092537505303",
            "tags": {
              "Name": "prod-IGW-almira"
            },
            "tags_all": {
              "Name": "prod-IGW-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e646b35ac742c0c8",
            "connectivity_type": "public",
            "id": "nat-091a42d5dfbca991c",
            "network_interface_id": "eni-0c983a3c7a64feadf",
            "private_ip": "172.20.1.53",
            "public_ip": "35.84.127.157",
            "subnet_id": "subnet-0e99124de1acffa56",
            "tags": {
              "Name": "prod-NAT-Gateway-almira"
            },
            "tags_all": {
              "Name": "prod-NAT-Gateway-almira"
            }
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:route-table/rtb-0f4ddb42aa9dbf329",
            "id": "rtb-0f4ddb42aa9dbf329",
            "owner_id": "092537505303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091a42d5dfbca991c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-Private-Route_Table-almira"
            },
            "tags_all": {
              "Name": "prod-Private-Route_Table-almira"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:route-table/rtb-0ea8d596bac7ec3a8",
            "id": "rtb-0ea8d596bac7ec3a8",
            "owner_id": "092537505303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8bc87365cbdc5f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-Public-Route_Table-almira"
            },
            "tags_all": {
              "Name": "prod-Public-Route_Table-almira"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb924997e574a538",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0e99124de1acffa56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd70b3d9f9b11f31",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0b1299c8b4f339266"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02efbb07a5a041e9f",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0970d1cf88ae4ece3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bb8117feaef89f6",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0b107f9f828e904eb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb924997e574a538",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0e99124de1acffa56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd70b3d9f9b11f31",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0b1299c8b4f339266"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02efbb07a5a041e9f",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0970d1cf88ae4ece3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bb8117feaef89f6",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0b107f9f828e904eb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb924997e574a538",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0e99124de1acffa56"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd70b3d9f9b11f31",
            "route_table_id": "rtb-0ea8d596bac7ec3a8",
            "subnet_id": "subnet-0b1299c8b4f339266"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e7f2632c5adbf5",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-08c0fd48c5f396f12"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c5ba1daa150f385",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-0712dce13fbe4f5ed"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09abd54d57c4f66fd",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-053192f7a34c89caa"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085270b1fb11b4e28",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-0944dff7cd29f75b9"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e7f2632c5adbf5",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-08c0fd48c5f396f12"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c5ba1daa150f385",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-0712dce13fbe4f5ed"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09abd54d57c4f66fd",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-053192f7a34c89caa"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085270b1fb11b4e28",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-0944dff7cd29f75b9"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5e7f2632c5adbf5",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-08c0fd48c5f396f12"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c5ba1daa150f385",
            "route_table_id": "rtb-0f4ddb42aa9dbf329",
            "subnet_id": "subnet-0712dce13fbe4f5ed"
          },
          "dependencies": [
            "aws_eip.nat-ip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-08c0fd48c5f396f12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c0fd48c5f396f12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Private-Subnet-1-almira"
            },
            "tags_all": {
              "Name": "prod-Private-Subnet-1-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0712dce13fbe4f5ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0712dce13fbe4f5ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Private-Subnet-2-almira"
            },
            "tags_all": {
              "Name": "prod-Private-Subnet-2-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-053192f7a34c89caa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.20.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053192f7a34c89caa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Private-Subnet-3-almira"
            },
            "tags_all": {
              "Name": "prod-Private-Subnet-3-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0944dff7cd29f75b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.20.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0944dff7cd29f75b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Private-Subnet-4-almira"
            },
            "tags_all": {
              "Name": "prod-Private-Subnet-4-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0e99124de1acffa56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99124de1acffa56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Public-Subnet-1-almira"
            },
            "tags_all": {
              "Name": "prod-Public-Subnet-1-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0b1299c8b4f339266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1299c8b4f339266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Public-Subnet-2-almira"
            },
            "tags_all": {
              "Name": "prod-Public-Subnet-2-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0970d1cf88ae4ece3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0970d1cf88ae4ece3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Public-Subnet-3-almira"
            },
            "tags_all": {
              "Name": "prod-Public-Subnet-3-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:subnet/subnet-0b107f9f828e904eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b107f9f828e904eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092537505303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-Public-Subnet-4-almira"
            },
            "tags_all": {
              "Name": "prod-Public-Subnet-4-almira"
            },
            "vpc_id": "vpc-0ccbdfd4516616efb"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:092537505303:vpc/vpc-0ccbdfd4516616efb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-07730efe605266a24",
            "default_route_table_id": "rtb-0b660916f5cadfa02",
            "default_security_group_id": "sg-0d5cde12002321285",
            "dhcp_options_id": "dopt-0bb7d49c4d775e6e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ccbdfd4516616efb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b660916f5cadfa02",
            "owner_id": "092537505303",
            "tags": {
              "Name": "prod-vpc-almira"
            },
            "tags_all": {
              "Name": "prod-vpc-almira"
            }
          }
        }
      ]
    }
  ]
}